descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 201X-XX-XX  Release 7.30.0                                     ---
----------------------------------------------------------------------

* added manual page for the 'get' command - Cliff Yapp
* fixed analyze command calculation for BoT volumes - Keith Bowman
* fixed dbconcat behavior for binary database objects - Cliff Yapp

----------------------------------------------------------------------
--- 2018-10-01  Release 7.28.0                                     ---
----------------------------------------------------------------------

This major release of BRL-CAD incorporates a new feature for caching
of raytrace acceleration structures used when working with explicit
boundary representation (BREP) Non-uniform Rational Basis Spline
(NURBS) solids.  This will result in significant improvements to
run times when repeatedly raytracing BREP solids.

Support for terrain import has been significantly expanded with the
addition of a new Geospatial Data Abstraction Library (GDAL) based
importer to the gcv conversion tool.  GDAL brings with it support for
dozens of different terrain data formats.

Also new in this release are a greatly improved graphical geometry
overlap resolving tool and support in the MGED search command for
an "exec" option which will allow users to execute MGED commands
on search results.

The MGED facetize command for generating polygonal geometry from
BRL-CAD objects has received significant attention, including the
incorporation of a "per-region" conversion mode, new conversion
methodologies and usability enhancements.

* fixed crash mixing flat and full path MGED searches - Cliff Yapp
* improved MGED ls command's help message - Cliff Yapp
* added -exec option to MGED's search command - Peter Pronai